--- a/client/app/s/s.html
+++ b/client/app/s/s.html
@@ -1,13 +1,13 @@
-<!--<link rel="import" href="elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html">
-<link rel="import" href="elements/problems-addition/problems-addition.html">-->
+<link rel="import" href="elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html">
+<link rel="import" href="elements/problems-addition/problems-addition.html">
 <!--<link rel="import" href="elements/mjbe-problem-view/mjbe-problem-view.html">-->
 <!--<mjbe-problem-view></mjbe-problem-view>-->
-<!--<mjbe-drawing-canvas class="fit"></mjbe-drawing-canvas>
-<problems-addition problemtype={{type}} complete={{complete}} correctcount={{cor}} bindPolymer></problems-addition>
+<!--<mjbe-drawing-canvas class="fit"></mjbe-drawing-canvas>-->
+<!--<problems-addition problemtype={{type}} complete={{complete}} correctcount={{cor}} bindPolymer></problems-addition>
 <input type="submit" ng-click="finish()" style="position:absolute; top: 1000">-->
 <!--<pie-status userselection="{{userselection}}" bind-polymer></pie-status>
 <input type="submit" ng-click="go()">-->
-<pie-status userselection="{{main.userselection}}" bind-polymer></pie-status>
-<input type="submit" ng-click="main.go()">
-<problems-addition problemtype="0" correctcount="{{main.correct}}" bind-polymer></problems-addition>
+<!--<pie-status userselection="{{main.userselection}}" bind-polymer></pie-status>-->
+<input type="submit" ng-click="s.go()">
+<problems-addition problemtype="0" correctcount="{{s.correct}}" bind-polymer></problems-addition>
 <link rel="import" href="elements/main-app/main-app.html">
