--- a/client/app/s/s.html
+++ b/client/app/s/s.html
@@ -1,13 +1,7 @@
 <link rel="import" href="elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html">
 <link rel="import" href="elements/problems-addition/problems-addition.html">
-<!--<link rel="import" href="elements/mjbe-problem-view/mjbe-problem-view.html">-->
-<!--<mjbe-problem-view></mjbe-problem-view>-->
-<!--<mjbe-drawing-canvas class="fit"></mjbe-drawing-canvas>-->
-<!--<problems-addition problemtype={{type}} complete={{complete}} correctcount={{cor}} bindPolymer></problems-addition>
-<input type="submit" ng-click="finish()" style="position:absolute; top: 1000">-->
-<!--<pie-status userselection="{{userselection}}" bind-polymer></pie-status>
-<input type="submit" ng-click="go()">-->
-<!--<pie-status userselection="{{main.userselection}}" bind-polymer></pie-status>-->
-<input type="submit" ng-click="s.go()">
+
+<mjbe-drawing-canvas class="fit"></mjbe-drawing-canvas>
 <problems-addition problemtype="{{s.type}}" correctcount="{{s.correct}}" complete="{{s.complete}}" bind-polymer></problems-addition>
+<input type="submit" ng-click="s.finish()" style="position:absolute">
 <link rel="import" href="elements/main-app/main-app.html">
