rewire problems service to depend on skills

--- a/client/elements/pie-status/pie-status.html
+++ b/client/elements/pie-status/pie-status.html
@@ -30,7 +30,7 @@
       },
     },
     clickHandler: function(d) {
-      this.userselection = d.data.problemGenId;
+      this.userselection = d.data._id;
     },
     drawPie: function() {
       console.log('got a response');
