--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="../bower_components/paper-tooltip/paper-tooltip.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
@@ -26,3 +27,5 @@
 <link rel="import" href="problems-addition/problems-addition.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="about-us/about-us.html">
+<link rel="import" href="mjbe-badges/mjbe-badges.html">
+
