--- a/client/app/s/s.html
+++ b/client/app/s/s.html
@@ -2,6 +2,6 @@
 <link rel="import" href="elements/problems-addition/problems-addition.html">
 
 <mjbe-drawing-canvas class="fit"></mjbe-drawing-canvas>
-<problems-addition problemtype="{{s.type}}" correctcount="{{s.correct}}" complete="{{s.complete}}" bind-polymer></problems-addition>
+<problems-addition problemtype="{{s.type}}" complete="{{s.complete}}" bind-polymer></problems-addition>
 <input type="submit" ng-click="s.finish()" style="position:absolute">
 <link rel="import" href="elements/main-app/main-app.html">
