--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -23,6 +23,7 @@
  -->
 <pie-status userselection="{{main.userselection}}" bind-polymer></pie-status>
 <input type="submit" ng-click="main.go()">
-<problems-addition problemtype="0" correctcount="{{main.correct}}" bind-polymer></problems-addition>
+<div class="removethis">Skills complete:</div>
+<div ng-repeat="skill in skills">{{skill.name}}</div>
 <link rel="import" href="elements/main-app/main-app.html">
 <!--<main-app></main-app>-->
