displaying known skills working

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -24,6 +24,6 @@
 <pie-status userselection="{{main.userselection}}" bind-polymer></pie-status>
 <input type="submit" ng-click="main.go()">
 <div class="removethis">Skills complete:</div>
-<div ng-repeat="skill in skills">{{skill.name}}</div>
+<div ng-repeat="skill in main.skills">{{skill.name}}</div>
 <link rel="import" href="elements/main-app/main-app.html">
 <!--<main-app></main-app>-->
