debugging broken polymer binding, problem isolated

--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -27,5 +27,5 @@
 <link rel="import" href="problems-addition/problems-addition.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="about-us/about-us.html">
-<link rel="import" href="mjbe-badges/mjbe-badges.html">
+<!--<link rel="import" href="mjbe-badges/mjbe-badges.html">-->
 
