fixed binding bug

--- a/client/elements/mjbe-badges/mjbe-badges.html
+++ b/client/elements/mjbe-badges/mjbe-badges.html
@@ -65,7 +65,7 @@
     </paper-material>
 
     </template>
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <!--<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
   <script>
     var userBadges = [{name:'addition',
                       image:'add',
