Added Dashboard Path, Directory

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
       <link rel="stylesheet" href="app/about/about.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/dashboard/dashboard.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/profile/profile.css">
       <link rel="stylesheet" href="app/s/s.css">
@@ -55,6 +56,7 @@
               <paper-tab ui-sref="profile">Profile</paper-tab>
               <paper-tab ui-sref="about">About</paper-tab>
               <paper-tab ui-sref="badges">Badges</paper-tab>
+              <paper-tab ui-sref="dashboard">Dashboard</paper-tab>
               <paper-tab>Sign Out</paper-tab>
             </paper-tabs>
           </div>
@@ -112,6 +114,8 @@
       <script src="app/app.constant.js"></script>
       <script src="app/badges/badges.controller.js"></script>
       <script src="app/badges/badges.js"></script>
+      <script src="app/dashboard/dashboard.controller.js"></script>
+      <script src="app/dashboard/dashboard.js"></script>
       <script src="app/directives/bindPolymer/bindPolymer.directive.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
