--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -18,7 +18,7 @@
 <link rel="import" href="../bower_components/point-overlay/point-overlay.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
-
+<link rel="import" href="../bower_components/web-animations-js/web-animations.html">
 
 <!-- CUSTOM ELEMENTS -->
 <link rel="import" href="main-app/main-app.html">
