--- a/client/index.html
+++ b/client/index.html
@@ -30,10 +30,8 @@
       <!-- endinjector -->
     <!-- endbuild -->
 
-     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="bower_components/polymer/polymer.html">
-    <link rel="import" href="bower_components/iron-icons/iron-icons.html">
-    <link rel="import" href="bower_components/paper-input/paper-input.html">
 
     <!-- CUSTOM ELEMENTS -->
     <link rel="import" href="elements/elements.html">
@@ -114,12 +112,14 @@
       <script src="app/app.constant.js"></script>
       <script src="app/badges/badges.controller.js"></script>
       <script src="app/badges/badges.js"></script>
+      <script src="app/classprogress/classprogress.js"></script>
       <script src="app/dashboard/dashboard.controller.js"></script>
       <script src="app/dashboard/dashboard.js"></script>
       <script src="app/directives/bindPolymer/bindPolymer.directive.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/profile/profile.controller.js"></script>
+      <script src="app/about/about.js"></script>
       <script src="app/profile/profile.js"></script>
       <script src="app/s/s.controller.js"></script>
       <script src="app/about/about.js"></script>
