Adjusted for Merge Conflicts

--- a/client/index.html
+++ b/client/index.html
@@ -112,6 +112,7 @@
       <script src="app/app.constant.js"></script>
       <script src="app/badges/badges.controller.js"></script>
       <script src="app/badges/badges.js"></script>
+      <script src="app/classprogress/classprogress.controller.js"></script>
       <script src="app/classprogress/classprogress.js"></script>
       <script src="app/dashboard/dashboard.controller.js"></script>
       <script src="app/dashboard/dashboard.js"></script>
