--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -21,7 +21,7 @@
 
 <footer></footer>
  -->
-<pie-status userselection="{{main.userselection}}" bind-polymer></pie-status>
+<pie-status userselection="{{main.userselection}}" namespace="main" bind-polymer></pie-status>
 <input type="submit" ng-click="main.go()">
 <div class="removethis">Skills complete:</div>
 <div ng-repeat="skill in main.skills">{{skill.name}}</div>
