implemented clicking pie chart to start solving

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -21,8 +21,7 @@
 
 <footer></footer>
  -->
-<pie-status userselection="{{main.userselection}}" namespace="main" bind-polymer></pie-status>
-<input type="submit" ng-click="main.go()">
+<pie-status userselection="{{main.userselection}}" event-namespace="main" bind-polymer></pie-status>
 <div class="removethis">Skills complete:</div>
 <div ng-repeat="skill in main.skills">{{skill.name}}</div>
 <link rel="import" href="elements/main-app/main-app.html">
