Added Mike's Back Button

--- a/client/index.html
+++ b/client/index.html
@@ -21,8 +21,10 @@
       <link rel="stylesheet" href="app/about/about.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/classprogress/classprogress.css">
       <link rel="stylesheet" href="app/dashboard/dashboard.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/modifications/modifications.css">
       <link rel="stylesheet" href="app/profile/profile.css">
       <link rel="stylesheet" href="app/s/s.css">
       <link rel="stylesheet" href="components/footer/footer.css">
@@ -104,6 +106,7 @@
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
       <script src="app/s/s.js"></script>
+      <script src="app/modifications/modifications.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/account/signup/signup.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -119,8 +122,9 @@
       <script src="app/directives/bindPolymer/bindPolymer.directive.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
-      <script src="app/profile/profile.controller.js"></script>
+      <script src="app/modifications/modifications.controller.js"></script>
       <script src="app/about/about.js"></script>
+      <script src="app/profile/profile.controller.js"></script>
       <script src="app/profile/profile.js"></script>
       <script src="app/s/s.controller.js"></script>
       <script src="app/about/about.js"></script>
