create add student ui

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,1 +1,4 @@
 <mjbe-dashboard></mjbe-dashboard>
+<div>Invite students:</div>
+<input type="text" ng-model="add">
+<input type="submit" ng-click="submit()">
