--- a/client/index.html
+++ b/client/index.html
@@ -129,6 +129,7 @@
       <script src="app/s/s.js"></script>
       <script src="app/services/Badges/Badges.service.js"></script>
       <script src="app/services/Badges/badgeDef.js"></script>
+      <script src="app/services/Teacher/Teacher.service.js"></script>
       <script src="app/services/problems/problems.service.js"></script>
       <script src="app/services/skills/skills.service.js"></script>
       <script src="app/account/account.js"></script>
