--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -6,4 +6,5 @@
     <paper-button raised ui-sref="main">Go back.</paper-button>
   </div>
 </paper-card>
+<div ng-click="accept()">{{requests[0]}}</div>
 
