add teacher display on client

--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -6,5 +6,8 @@
     <paper-button raised ui-sref="main">Go back.</paper-button>
   </div>
 </paper-card>
+Requests:
 <div ng-click="accept()">{{requests[0]}}</div>
+Teachers:
+<div>{{teachers[0]}}</div>
 
