--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -2,3 +2,6 @@
 <div>Invite students:</div>
 <input type="text" ng-model="add">
 <input type="submit" ng-click="submit()">
+
+<div>Pending invitations:</div>
+<div>{{invitations[0]}}</div>
