--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -18,7 +18,9 @@
 <link rel="import" href="../bower_components/point-overlay/point-overlay.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
-
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animations.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
 
 <!-- CUSTOM ELEMENTS -->
 <link rel="import" href="main-app/main-app.html">
@@ -28,4 +30,4 @@
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="about-us/about-us.html">
 <link rel="import" href="mjbe-badges/mjbe-badges.html">
-
+<link rel="import" href="auth-card/auth-card.html">
