--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -22,6 +22,7 @@
 <link rel="import" href="../bower_components/neon-animation/neon-animations.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
 
 <!-- CUSTOM ELEMENTS -->
 <link rel="import" href="main-app/main-app.html">
@@ -33,5 +34,4 @@
 <link rel="import" href="mjbe-dashboard/mjbe-dashboard.html">
 <link rel="import" href="mjbe-dashboard-classprogress/mjbe-dashboard-classprogress.html">
 <link rel="import" href="mjbe-modifications/mjbe-modifications.html">
-
-
+<link rel="import" href="auth-card/auth-card.html">
