Added List Elements, and Sample Data

--- a/client/app/classprogress/classprogress.html
+++ b/client/app/classprogress/classprogress.html
@@ -1,1 +1,2 @@
-<mjbe-dashboard-classprogress></mjbe-dashboard-classprogress>
+<div><mjbe-collapse-list></mjbe-collapse-list></div>
+<!-- <div><mjbe-dashboard-classprogress></mjbe-dashboard-classprogress></div> -->
