--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -15,16 +15,20 @@
 <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-icons/image-icons.html">
 <link rel="import" href="../bower_components/google-map/google-map.html">
 <link rel="import" href="../bower_components/point-overlay/point-overlay.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animations.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animation.html">
-<link rel="import" href="../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-styles/color.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-list/iron-list.html">
 
 <!-- CUSTOM ELEMENTS -->
 <link rel="import" href="main-app/main-app.html">
@@ -35,5 +39,6 @@
 <link rel="import" href="mjbe-badges/mjbe-badges.html">
 <link rel="import" href="mjbe-dashboard/mjbe-dashboard.html">
 <link rel="import" href="mjbe-dashboard-classprogress/mjbe-dashboard-classprogress.html">
+<link rel="import" href="mjbe-dashboard-classprogress/mjbe-collapse-list.html">
 <link rel="import" href="mjbe-modifications/mjbe-modifications.html">
 <link rel="import" href="auth-card/auth-card.html">
