update bindPolymer directive to work without a namespace

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<mjbe-dashboard></mjbe-dashboard>
+<mjbe-dashboard selected="{{selected}}" bind-polymer></mjbe-dashboard>
 <div>Invite students:</div>
 <input type="text" ng-model="add">
 <input type="submit" ng-click="submit()">
