fix JSON parsing too early bug

--- a/client/elements/mjbe-dashboard/mjbe-dashboard.html
+++ b/client/elements/mjbe-dashboard/mjbe-dashboard.html
@@ -80,7 +80,11 @@ Polymer({
     console.log(selected);
   },
   parseClasses: function(classes) {
-    return JSON.parse(classes);
+    try {
+      return JSON.parse(classes);
+    } catch (e) {
+      return [];
+    }
   }
 });
 </script>
