returning correct ID

--- a/client/elements/mjbe-dashboard/mjbe-dashboard.html
+++ b/client/elements/mjbe-dashboard/mjbe-dashboard.html
@@ -76,7 +76,7 @@ Polymer({
     this.$.modal.open();
   },
   selectClass: function(e) {
-    selected = e.model.item._id;
+    selected = e.model.item.id;
     console.log(selected);
   },
   parseClasses: function(classes) {
