classes passing and displaying in classprogress

--- a/client/app/classprogress/classprogress.html
+++ b/client/app/classprogress/classprogress.html
@@ -1,2 +1,2 @@
-<div><mjbe-collapse-list></mjbe-collapse-list></div>
+<div><mjbe-collapse-list name="{{name}}"></mjbe-collapse-list></div>
 <!-- <div><mjbe-dashboard-classprogress></mjbe-dashboard-classprogress></div> -->
