adding classes works

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -8,3 +8,7 @@
 
 <div>Students:</div>
 <div>{{students[0]}}</div>
+
+<div>Create new class:</div>
+<input type="text" ng-model="addClass">
+<input type="submit" ng-click="submitClass()"> 
