fixed skill display bug

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -23,6 +23,6 @@
  -->
 <pie-status userselection="{{main.userselection}}" event-namespace="main" bind-polymer></pie-status>
 <div class="removethis">Skills complete:</div>
-<div ng-repeat="skill in main.skills">{{skill.name}}</div>
+<div ng-repeat="skill in main.skills">{{skill.skill.name}}</div>
 <link rel="import" href="elements/main-app/main-app.html">
 <!--<main-app></main-app>-->
