--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -7,7 +7,7 @@
   </div>
 </paper-card>
 Requests:
-<div ng-click="accept()">{{requests[0]}}</div>
+<div ng-click="accept()">{{requests[0].teacher}}</div>
 Teachers:
-<div>{{teachers[0]}}</div>
+<div>{{teacher}}</div>
 
