--- a/client/index.html
+++ b/client/index.html
@@ -45,13 +45,31 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-  
+      <paper-header-panel class="flex" main mode="waterfall">
         <!-- Main Toolbar -->
 
-      
+        <paper-toolbar ng-controller="NavbarCtrl">
+          <div class="title top">Thesis Academy{{message}}</div>
+          <div class="horizontal layout">
+            <paper-tabs>
+              <paper-tab ui-sref="main">Home</paper-tab>
+              <paper-tab ui-sref="profile">Profile</paper-tab>
+              <paper-tab ui-sref="about">About</paper-tab>
+              <paper-tab ui-sref="badges">Badges</paper-tab>
+              <paper-tab ui-sref="dashboard">Dashboard</paper-tab>
+              <paper-tab ui-sref="login">Sign Out</paper-tab>
+            </paper-tabs>
+          </div>
+        </paper-toolbar>
+        <!--<div class="fit">
+        <paper-material flex elevation = "1" class="fit" style="background-color: #000;"></paper-material>
+        </div>-->
+       <div class="content fit">
   
     <ui-view class="fit"></ui-view>
-   
+    </div>
+
+     </paper-header-panel>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -88,10 +106,11 @@
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
       <script src="app/profile/profile.controller.js"></script>
+      <script src="app/account/login/login.controller.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/account/signup/signup.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
-      <script src="app/about/about.controller.js"></script>
+      <script src="app/Navbar/Navbar.controller.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/badges/badges.controller.js"></script>
@@ -105,7 +124,7 @@
       <script src="app/main/main.js"></script>
       <script src="app/modifications/modifications.controller.js"></script>
       <script src="app/modifications/modifications.js"></script>
-      <script src="app/about/about.js"></script>
+      <script src="app/about/about.controller.js"></script>
       <script src="app/profile/profile.js"></script>
       <script src="app/s/s.controller.js"></script>
       <script src="app/s/s.js"></script>
@@ -114,7 +133,7 @@
       <script src="app/services/Student/Student.service.js"></script>
       <script src="app/services/Teacher/Teacher.service.js"></script>
       <script src="app/services/skills/skills.service.js"></script>
-      <script src="app/account/account.js"></script>
+      <script src="app/about/about.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
@@ -125,7 +144,7 @@
       <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.controller.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.directive.js"></script>
-      <script src="app/account/login/login.controller.js"></script>
+      <script src="app/account/account.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
