toggle sign in/sign out mostly working

--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
               <paper-tab ui-sref="about">About</paper-tab>
               <paper-tab ui-sref="badges">Badges</paper-tab>
               <paper-tab ui-sref="dashboard">Dashboard</paper-tab>
+              <paper-tab ui-sref="login" ng-show="!loggedIn">Sign in</paper-tab>
               <paper-tab ui-sref="login" ng-show="loggedIn">Sign Out</paper-tab>
             </paper-tabs>
           </div>
