--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
               <paper-tab ui-sref="profile">Profile</paper-tab>
               <paper-tab ui-sref="about">About</paper-tab>
               <paper-tab ui-sref="badges">Badges</paper-tab>
-              <paper-tab ui-sref="dashboard">Dashboard</paper-tab>
+              <paper-tab ui-sref="dashboard" ng-show="isTeacher">Dashboard</paper-tab>
               <paper-tab ui-sref="login" ng-show="!loggedIn">Sign in</paper-tab>
               <paper-tab ui-sref="login" ng-show="loggedIn">Sign Out</paper-tab>
             </paper-tabs>
