Removed submit button and added listener to s.controller for problem set completion

--- a/client/app/s/s.html
+++ b/client/app/s/s.html
@@ -2,5 +2,4 @@
 <link rel="import" href="elements/problems-addition/problems-addition.html">
 
 <mjbe-drawing-canvas class="fit"></mjbe-drawing-canvas>
-<problems-addition problemtype="{{s.type}}" complete="{{s.complete}}" bind-polymer></problems-addition>
-<input type="submit" ng-click="s.finish()" style="position:absolute">
+<problems-addition problemtype="{{s.type}}" complete="{{s.complete}}" event-namespace="s" bind-polymer></problems-addition>
